Download Figures & Import Libraries

--- a/main.ipynb
+++ b/main.ipynb
@@ -1,16 +1,83 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "773e62c1",
+   "metadata": {},
+   "source": [
+    "### ---IN4640 Assignment 1 on Intensity Transformations and Neighborhood Filtering---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "670651d1",
+   "metadata": {},
+   "source": [
+    "#### Download Figures"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "74081f86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "emma_salt_pepper.jpg  highlights_and_shadows.jpg  looking_out.jpg  runway.png\n"
+     ]
+    }
+   ],
+   "source": [
+    "urls = [\"https://github.com/Arachchimkf/-Intensity-Transformations-and-Neighborhood-Filtering/blob/main/Images/runway.png\",\n",
+    "        \"https://github.com/Arachchimkf/-Intensity-Transformations-and-Neighborhood-Filtering/blob/main/Images/emma_salt_pepper.jpg\",\n",
+    "        \"https://github.com/Arachchimkf/-Intensity-Transformations-and-Neighborhood-Filtering/blob/main/Images/highlights_and_shadows.jpg\",\n",
+    "        \"https://github.com/Arachchimkf/-Intensity-Transformations-and-Neighborhood-Filtering/blob/main/Images/looking_out.jpg\"]\n",
+    "\n",
+    "for url in urls:\n",
+    "    raw_url = url.replace(\"github.com\", \"raw.githubusercontent.com\").replace(\"/blob/\", \"/\")\n",
+    "    !wget -q {raw_url} -O {raw_url.split(\"/\")[-1]}\n",
+    "\n",
+    "!ls *.jpg *.png"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e37ac87",
+   "metadata": {},
+   "source": [
+    "#### Import Libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "73ebe886",
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
-    "\n",
-    "https://github.com/Arachchimkf/-Intensity-Transformations-and-Neighborhood-Filtering/blob/2265e7bacf1e3bce04284e22f935fbdbf62aa458/main.py"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4848eb9",
+   "metadata": {},
+   "source": [
+    "#### Question 01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aff8cfe1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
