--- a/main.ipynb
+++ b/main.ipynb
@@ -182,10 +182,160 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5db03be8",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "gamma_value = 0.5\n",
+    "\n",
+    "# 1. Load the original image\n",
+    "img_bgr = cv2.imread('highlights_and_shadows.jpg')\n",
+    "\n",
+    "# 2. Convert from BGR to CIE L*a*b* color space\n",
+    "img_lab = cv2.cvtColor(img_bgr, cv2.COLOR_BGR2LAB)\n",
+    "\n",
+    "# Split the channels\n",
+    "l_channel, a_channel, b_channel = cv2.split(img_lab)\n",
+    "\n",
+    "# 3. Apply Gamma Correction to the L (Lightness) channel\n",
+    "# Normalize L to [0, 1] for the math\n",
+    "l_norm = l_channel / 255.0\n",
+    "l_corrected_norm = np.power(l_norm, gamma_value)\n",
+    "# Scale back to [0, 255] and convert to uint8\n",
+    "l_new = np.uint8(np.clip(l_corrected_norm * 255, 0, 255))\n",
+    "\n",
+    "# 4. Merge the channels back together\n",
+    "# Use the new L channel with the original a and b channels\n",
+    "img_lab_corrected = cv2.merge((l_new, a_channel, b_channel))\n",
+    "\n",
+    "# Convert back to BGR, then to RGB for matplotlib display\n",
+    "img_corrected_bgr = cv2.cvtColor(img_lab_corrected, cv2.COLOR_LAB2BGR)\n",
+    "img_corrected_rgb = cv2.cvtColor(img_corrected_bgr, cv2.COLOR_BGR2RGB)\n",
+    "img_original_rgb = cv2.cvtColor(img_bgr, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "# 5. Compute Histograms for the L channel\n",
+    "# We compare the distribution of Lightness before and after\n",
+    "hist_original = cv2.calcHist([l_channel], [0], None, [256], [0, 256])\n",
+    "hist_corrected = cv2.calcHist([l_new], [0], None, [256], [0, 256])\n",
+    "\n",
+    "# ---------------------------------------------------------\n",
+    "# Visualization\n",
+    "# ---------------------------------------------------------\n",
+    "plt.figure(figsize=(14, 10))\n",
+    "\n",
+    "# (a) Original Image\n",
+    "plt.subplot(2, 2, 1)\n",
+    "plt.imshow(img_original_rgb)\n",
+    "plt.title('Original Image (Underexposed)')\n",
+    "plt.axis('off')\n",
+    "\n",
+    "# (b) Corrected Image\n",
+    "# Note: rf'' handles the backslash for the gamma symbol correctly\n",
+    "plt.subplot(2, 2, 2)\n",
+    "plt.imshow(img_corrected_rgb)\n",
+    "plt.title(rf'Corrected Image (L-channel $\\gamma={gamma_value}$)')\n",
+    "plt.axis('off')\n",
+    "\n",
+    "# (c) Histogram: Original\n",
+    "plt.subplot(2, 2, 3)\n",
+    "plt.plot(hist_original, color='black')\n",
+    "plt.title('Histogram of Original L-Channel')\n",
+    "plt.xlabel('Pixel Intensity (Lightness)')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "\n",
+    "# (d) Histogram: Corrected\n",
+    "plt.subplot(2, 2, 4)\n",
+    "plt.plot(hist_corrected, color='blue')\n",
+    "plt.title(rf'Histogram of Corrected L-Channel ($\\gamma={gamma_value}$)')\n",
+    "plt.xlabel('Pixel Intensity (Lightness)')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71c64d5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gamma_value = 0.5\n",
+    "\n",
+    "# 1. Load the original image\n",
+    "img_bgr = cv2.imread('highlights_and_shadows.jpg')\n",
+    "\n",
+    "# 2. Convert from BGR to CIE L*a*b* color space\n",
+    "img_lab = cv2.cvtColor(img_bgr, cv2.COLOR_BGR2LAB)\n",
+    "\n",
+    "# Split the channels\n",
+    "l_channel, a_channel, b_channel = cv2.split(img_lab)\n",
+    "\n",
+    "# 3. Apply Gamma Correction to the L (Lightness) channel\n",
+    "# Normalize L to [0, 1] for the math\n",
+    "l_norm = l_channel / 255.0\n",
+    "l_corrected_norm = np.power(l_norm, gamma_value)\n",
+    "# Scale back to [0, 255] and convert to uint8\n",
+    "l_new = np.uint8(np.clip(l_corrected_norm * 255, 0, 255))\n",
+    "\n",
+    "# 4. Merge the channels back together\n",
+    "# Use the new L channel with the original a and b channels\n",
+    "img_lab_corrected = cv2.merge((l_new, a_channel, b_channel))\n",
+    "\n",
+    "# Convert back to BGR, then to RGB for matplotlib display\n",
+    "img_corrected_bgr = cv2.cvtColor(img_lab_corrected, cv2.COLOR_LAB2BGR)\n",
+    "img_corrected_rgb = cv2.cvtColor(img_corrected_bgr, cv2.COLOR_BGR2RGB)\n",
+    "img_original_rgb = cv2.cvtColor(img_bgr, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "# 5. Compute Histograms for the L channel\n",
+    "# We compare the distribution of Lightness before and after\n",
+    "hist_original = cv2.calcHist([l_channel], [0], None, [256], [0, 256])\n",
+    "hist_corrected = cv2.calcHist([l_new], [0], None, [256], [0, 256])\n",
+    "\n",
+    "# ---------------------------------------------------------\n",
+    "# Visualization\n",
+    "# ---------------------------------------------------------\n",
+    "plt.figure(figsize=(14, 10))\n",
+    "\n",
+    "# (a) Original Image\n",
+    "plt.subplot(2, 2, 1)\n",
+    "plt.imshow(img_original_rgb)\n",
+    "plt.title('Original Image (Underexposed)')\n",
+    "plt.axis('off')\n",
+    "\n",
+    "# (b) Corrected Image\n",
+    "# Note: rf'' handles the backslash for the gamma symbol correctly\n",
+    "plt.subplot(2, 2, 2)\n",
+    "plt.imshow(img_corrected_rgb)\n",
+    "plt.title(rf'Corrected Image (L-channel $\\gamma={gamma_value}$)')\n",
+    "plt.axis('off')\n",
+    "\n",
+    "# (c) Histogram: Original\n",
+    "plt.subplot(2, 2, 3)\n",
+    "plt.plot(hist_original, color='black')\n",
+    "plt.title('Histogram of Original L-Channel')\n",
+    "plt.xlabel('Pixel Intensity (Lightness)')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "\n",
+    "# (d) Histogram: Corrected\n",
+    "plt.subplot(2, 2, 4)\n",
+    "plt.plot(hist_corrected, color='blue')\n",
+    "plt.title(rf'Histogram of Corrected L-Channel ($\\gamma={gamma_value}$)')\n",
+    "plt.xlabel('Pixel Intensity (Lightness)')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
@@ -193,18 +343,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.12"
   }
  },
  "nbformat": 4,
